Styling the theme section block. Blocks overflow correction.

--- a/src/sass/bootstrap/_pre-default.scss
+++ b/src/sass/bootstrap/_pre-default.scss
@@ -37,6 +37,7 @@ $dropdown-border-color: $nav-tabs-border-color;
 $dropdown-divider-bg: $jc-theme-medium;
 $dropdown-divider-margin-y: .25rem;
 
+$dropdown-link-active-color: $jc-theme-darker;
 $dropdown-link-active-bg: $jc-theme-light;
 $dropdown-link-hover-bg: $jc-secondary;
 $dropdown-link-disabled-color: $jc-theme-medium-dark;
