--- a/src/sass/theme/_pages-blocks.scss
+++ b/src/sass/theme/_pages-blocks.scss
@@ -47,6 +47,10 @@
 }
 
 /** Special blocks */
+.wt-block-content-charts {
+    overflow-x: auto;
+}
+
 .wt-block-content-gedcom_stats {
     .list-inline-item {
         margin: 0;
