--- a/src/sass/theme/_pages-cards.scss
+++ b/src/sass/theme/_pages-cards.scss
@@ -1,7 +1,5 @@
 /** JustLight Theme - Specific pages - Cards */
 .card {
-    overflow-x: auto;
-
     /** Individual page Sidebar */
     #sidebar & {
         font-size: $font-size-sm;
